build_log_66.txt
[ 16%] Built target shaders_spirv
[ 18%] Building CXX object CMakeFiles/sisterapp.dir/src/terrain/terrain_generator.cpp.o
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:21: warning: ignoring ‘#pragma omp parallel’ [-Wunknown-pragmas]
   21 |     #pragma omp parallel for collapse(2)
In file included from /run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:1:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.h: In constructor ‘terrain::TerrainGenerator::TerrainGenerator(int)’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.h:19:9: warning: ‘terrain::TerrainGenerator::seed_’ will be initialized after [-Wreorder]
   19 |     int seed_;
      |         ^~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.h:18:23: warning:   ‘math::PerlinNoise terrain::TerrainGenerator::noise_’ [-Wreorder]
   18 |     math::PerlinNoise noise_;
      |                       ^~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:8:1: warning:   when initialized here [-Wreorder]
    8 | TerrainGenerator::TerrainGenerator(int seed) : seed_(seed), noise_(seed) {
      | ^~~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:8:68: warning: conversion to ‘unsigned int’ from ‘int’ may change the sign of the result [-Wsign-conversion]
    8 | TerrainGenerator::TerrainGenerator(int seed) : seed_(seed), noise_(seed) {
      |                                                                    ^~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:9:5: error: ‘rng’ was not declared in this scope
    9 |     rng.seed(seed_);
      |     ^~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp: In member function ‘void terrain::TerrainGenerator::applyErosion(terrain::TerrainMap&, int)’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:65:39: warning: conversion from ‘long int’ to ‘float’ may change value [-Wconversion]
   65 |     int iterations = static_cast<int>(area * 0.05f);
      |                                       ^~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:83:5: error: ‘rng’ was not declared in this scope
   83 |     rng.seed(seed_);
      |     ^~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:100:27: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  100 |             float u = x - nodeX;
      |                           ^~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:101:27: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  101 |             float v = y - nodeY;
      |                           ^~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:125:36: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  125 |             if (x < 0 || x >= width-1 || y < 0 || y >= height-1) break;
      |                               ~~~~~^~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:125:62: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  125 |             if (x < 0 || x >= width-1 || y < 0 || y >= height-1) break;
      |                                                        ~~~~~~^~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:130:28: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  130 |             float nU = x - nX; float nV = y - nY;
      |                            ^~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:130:47: warning: conversion from ‘int’ to ‘float’ may change value [-Wconversion]
  130 |             float nU = x - nX; float nV = y - nY;
      |                                               ^~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:154:39: warning: conversion to ‘std::vector<float>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
  154 |                     map.sedimentMap()[cellIndex] += amount;
      |                                       ^~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:170:35: warning: conversion to ‘std::vector<float>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
  170 |                 map.sedimentMap()[cellIndex] += amount;
      |                                   ^~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:174:27: warning: conversion to ‘std::vector<float>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
  174 |             map.fluxMap()[cellIndex] += 1.0f;
      |                           ^~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:194:36: warning: conversion to ‘std::vector<float>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
  194 |                 smoothed[z * width + x] = sum / 9.0f;
      |                          ~~~~~~~~~~^~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:200:56: warning: conversion to ‘std::vector<float>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
  200 |                 map.setHeight(x, z, smoothed[z * width + x]);
      |                                              ~~~~~~~~~~^~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:214:36: warning: conversion to ‘std::vector<float>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
  214 |             smoothedFlux[z * width + x] = sum / 9.0f;
      |                          ~~~~~~~~~~^~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/terrain/terrain_generator.cpp:219:54: warning: conversion to ‘std::vector<float>::size_type’ {aka ‘long unsigned int’} from ‘int’ may change the sign of the result [-Wsign-conversion]
  219 |             map.setFlux(x, z, smoothedFlux[z * width + x]);
      |                                            ~~~~~~~~~~^~~
gmake[2]: *** [CMakeFiles/sisterapp.dir/build.make:541: CMakeFiles/sisterapp.dir/src/terrain/terrain_generator.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:90: CMakeFiles/sisterapp.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
